Created the register page

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-footer>
   <div class="signInBtnHolder">
-    <button class="signIn" ion-button  (click)="signin()">New here? Create an account now!</button>
+    <button class="signIn" ion-button  (click)="signIn()">New here? Create an account now!</button>
   </div>
 </ion-footer>
 
