--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,11 +1,8 @@
 <ion-header>
-  
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
+    <ion-icon class = "menuIcon" name="menu" (click)="seeProfile()"></ion-icon>
       <ion-title>
-        Home
       </ion-title>
+      <ion-icon class = "profileIcon" name="contact" (click)="seeProfile()"></ion-icon>
     
 </ion-header>
   
