Created the user profile component

--- a/src/app/userprofile/userprofile.page.html
+++ b/src/app/userprofile/userprofile.page.html
@@ -8,7 +8,22 @@
 
 
 <ion-content>
-<div class="ion-padding">
-This is the user profile
-</div>
+  <div class="mainItemsHolder">
+    <ion-avatar class = "profileImage">
+      <img  src="http://i.huffpost.com/gadgets/slideshows/257333/slide_257333_1650510_free.jpg">
+    </ion-avatar>
+    <ion-label class="userId">atheesh_27</ion-label> 
+    <div class="profileItem">
+        <ion-label>Since</ion-label>
+        <ion-label class="valueText">Since</ion-label>
+    </div>
+    <div class="profileItem">
+        <ion-label >Total Comments</ion-label>
+        <ion-label class="valueText">Since</ion-label>
+    </div>
+    <div class="profileItem">
+        <ion-label >atheesh_27</ion-label>
+        <ion-label text-right>Since</ion-label>
+    </div>
+  </div>
 </ion-content>
