--- a/src/app/userprofile/userprofile.page.scss
+++ b/src/app/userprofile/userprofile.page.scss
@@ -10,3 +10,46 @@ ion-header{
     margin-bottom: 10px;
     margin-top: 10px;
 }
+
+.mainItemsHolder{
+    align-items: center;
+    //justify-content: center;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    align-content: center;
+    height: 100%;
+    display:flex;
+    flex-direction: column;
+}
+
+.profileImage{
+    height: 8em;
+    width: 8em;
+}
+
+.userId{
+    font-size: 150%;
+    margin-top: 2%;
+    font-style: oblique;
+    margin-bottom: 3%;
+}
+
+.profileItem{
+    border-radius: 15px !important;
+    background-color: rgb(205, 228, 227);
+    width: 93%;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 18px;
+    margin-top: 1%;
+    display: flex;
+    flex-direction: row;
+    
+}
+
+.valueText{
+    font-size: 16px;
+    font-style: oblique;
+    float: right;
+
+}
