fixed the back button

--- a/src/app/userprofile/userprofile.page.html
+++ b/src/app/userprofile/userprofile.page.html
@@ -15,15 +15,16 @@
     <ion-label class="userId">atheesh_27</ion-label> 
     <div class="profileItem">
         <ion-label>Since</ion-label>
-        <ion-label class="valueText">Since</ion-label>
+        <ion-label class="valueText">Jan 15, 2019</ion-label>
     </div>
+
     <div class="profileItem">
         <ion-label >Total Comments</ion-label>
-        <ion-label class="valueText">Since</ion-label>
+        <ion-label class="valueText">45</ion-label>
     </div>
-    <div class="profileItem">
-        <ion-label >atheesh_27</ion-label>
-        <ion-label text-right>Since</ion-label>
+
+    <div>
+      <button class="logInBtn" ion-button (click)="logout()">Log out</button>
     </div>
   </div>
 </ion-content>
