--- a/src/app/userprofile/userprofile.page.scss
+++ b/src/app/userprofile/userprofile.page.scss
@@ -1,11 +1,17 @@
 ion-header{
+    background-color: #306EFF;
     display:flex;
     flex-direction: row;
 }
 
+ion-title{
+    color: white;
+}
+
+
 .settingsIcon{
     font-size: 190%;
-    color: grey;
+    color: white;
     margin-right: 13px;
     margin-bottom: 10px;
     margin-top: 10px;
