Created the user profile data popular functions

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,5 @@
 ion-header{
-    background-color: #306EFF;
+    background-color: rgb(24, 126, 129);
     display:flex;
     flex-direction: row;
 }
