--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -5,7 +5,7 @@
     height: 100%;
     display:flex;
     flex-direction: column;
-    background-color: #306EFF
+    background-color: rgb(24, 126, 129);
 }
 
 .pageTitle{
@@ -50,7 +50,7 @@ ion-input{
 
 ion-footer{
     color: white;
-    background-color: #306EFF;
+    background-color: rgb(24, 126, 129);
     padding: 14px;
 }
 
