--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -5,7 +5,7 @@
     height: 100%;
     display:flex;
     flex-direction: column;
-    background-color: #306EFF
+    background-color: rgb(24, 126, 129)
 }
 
 .pageTitle{
