--- a/src/app/userprofile/userprofile.page.html
+++ b/src/app/userprofile/userprofile.page.html
@@ -10,17 +10,17 @@
 <ion-content>
   <div class="mainItemsHolder">
     <ion-avatar class = "profileImage">
-      <img  src="http://i.huffpost.com/gadgets/slideshows/257333/slide_257333_1650510_free.jpg">
+      <img  src={{(userDataSet|async)?.profilePicUrl}}>
     </ion-avatar>
-    <ion-label class="userId">{{profile.name}}</ion-label> 
+    <ion-label class="userId">{{(userDataSet|async)?.name}}</ion-label> 
     <div class="profileItem">
         <ion-label>Since</ion-label>
-        <ion-label class="valueText" >{{profile.since}}</ion-label>
+        <ion-label class="valueText" >{{ (userDataSet | async)?.since }}</ion-label>
     </div>
 
     <div class="profileItem">
         <ion-label >Total Comments</ion-label>
-        <ion-label class="valueText">{{profile.totalComments}}</ion-label>
+        <ion-label class="valueText">{{ (userDataSet | async)?.totalComments }}</ion-label>
     </div>
 
     <div>
