--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -3,11 +3,6 @@ ion-header{
     display:flex;
     flex-direction: row;
 }
-
-.profileIcon{
-
-}
-
 .headerDateHolder{
     align-items: center;
     justify-content: flex-start;
@@ -39,7 +34,87 @@ ion-header{
 
 }
 
-.profileAvatar{
+.todaysPhotoHolder{
+    display:flex;
+    flex-direction: column;
+    margin: 2%;
+    padding-top: 8px;
+    padding-right: 8px;
+    padding-left: 8px;
+    padding-bottom: 8px;
+    background-color: white;
+    box-shadow: 5px 5px 5px #999; 
+    -moz-box-shadow: 5px 5px 5px #999;
+    -webkit-box-shadow: 5px 5px 5px #999;
+}
+
+.imageSrc{
+    max-height: 60%;
+    margin-bottom: 8px;
+    margin-top: 5px;
+}
+
+.photoDataHolder{
+    //flex-direction: row;
+    display: block;
+    text-align: justify;
 
 }
+
+.dateBadge{
+    float: left;
+    padding: 7px;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    width: 30%;
+}
+
+.likeIcon{
+    float: left;
+    font-size:1.7em;
+}
+
+.numberOfLikes{
+    margin-left: 0.2em;
+    color: rgb(85, 82, 82);
+}
+
+.commentsLabel{
+    float: right;
+    font-style: oblique;
+    color: rgb(85, 82, 82);
+}
+
+.numberOfComments{
+    float: right;
+    margin-right: 3px;
+    font-style: oblique;
+    color: rgb(85, 82, 82);
+}
+
+
+.commentBtn{
+    color: white;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    border-radius: 40px !important;
+    background-color: rgb(24, 126, 129);
+    padding: 1em;
+    box-shadow: 5px 5px 5px #999; 
+    -moz-box-shadow: 3px 3px 3px #999;
+    -webkit-box-shadow: 3px 3px 3px #999;
+
+}
+
+.topCommentsSection{
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
 
