--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -57,7 +57,7 @@ ion-footer{
 .signIn{
     font-size: 14px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color:#306EFF;
+    background-color:rgb(24, 126, 129);
     color: beige;
 
 }
