--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,7 +18,7 @@
     <img class="imageSrc" src={{(receivedPostData|async)?.url}}>
 
     <div class="photoDataHolder">
-      <ion-icon name="heart-empty" class="likeIcon" (click)="presentModal()"></ion-icon>
+      <ion-icon name={{likeBtnName}} class="likeIcon" (click)="likeThePost()"></ion-icon>
       <ion-label class="numberOfLikes">{{(receivedPostData|async)?.likes}}</ion-label>
       <ion-label class="commentsLabel">comments</ion-label>
       <ion-label class="numberOfComments">{{(receivedPostData|async)?.totalcomments}}</ion-label>
