--- a/src/app/addacomment/addacomment.page.html
+++ b/src/app/addacomment/addacomment.page.html
@@ -1,10 +1,16 @@
 <ion-content>
-  <div class="commentListHolder">
-      <ion-label >comment list will be shown here</ion-label>
+ <div class="commentListHolder">
+    <ion-label >comment list will be shown here</ion-label>
+    <ion-list>
+
+
+    </ion-list>
   </div>
+  
+  
   <div class="commentingSection">
-      <ion-textarea placeholder="add a comment.."></ion-textarea>
-      <ion-icon name="send" class="commentSendIcon"></ion-icon>
+      <ion-textarea [(ngModel)]="userComment.comment"  placeholder="add a comment.."></ion-textarea>
+      <ion-icon name="send" class="commentSendIcon" (click)="validateTheComment()"></ion-icon>
   </div>
 
 </ion-content>
