--- a/src/app/addacomment/addacomment.page.scss
+++ b/src/app/addacomment/addacomment.page.scss
@@ -4,6 +4,9 @@ ion-content{
 }
 
 .commentingSection{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     display: flex;
     flex-direction: row;
     margin-left: 5px;
@@ -25,7 +28,25 @@ ion-content{
 }
 
 .commentSendIcon{
+  
     color: rgb(24, 126, 129);
     font-size: 2em;
     margin-right: 4px;
+}
+
+ion-card{
+    background-color: aqua;
+    display: flex;
+    flex-direction: row;
+}
+
+.cardContent{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+}
+
+ion-avatar{
+    padding-top: 2em;
+    padding-left: 2em;
 }
