created the upvote and downvote feature

--- a/src/app/addacomment/addacomment.page.html
+++ b/src/app/addacomment/addacomment.page.html
@@ -19,7 +19,7 @@
 --> 
 
   <ion-virtual-scroll [items]="comments" approxItemHeight="'100px'">
-    <div *virtualItem="let comment" >
+    <div *virtualItem="let comment" > <!--Wrapping with a div is important-->
       <ion-card>
         <div class="likeHolder">
           <ion-avatar>
