--- a/src/app/addacomment/addacomment.page.scss
+++ b/src/app/addacomment/addacomment.page.scss
@@ -35,10 +35,10 @@ ion-content{
 }
 
 ion-card{
-    background-color: whitesmoke;
+    background-color: white;
     display: flex;
     flex-direction: row;
-    border-radius: 10px !important;
+    border-radius: 5px !important;
 
 }
 
