fixed a bug in voting button

--- a/src/app/addacomment/addacomment.page.scss
+++ b/src/app/addacomment/addacomment.page.scss
@@ -79,9 +79,16 @@ ion-avatar{
 
 }
 
-.likeUpDown{
+.likeUp{
     font-size: 2.2em;
+    
 
+}
+
+
+.likeDown{
+    font-size: 2.2em;
+   
 }
 
 .likeAmount{
