--- a/src/app/addacomment/addacomment.page.html
+++ b/src/app/addacomment/addacomment.page.html
@@ -25,9 +25,9 @@
           <ion-avatar>
             <img src="{{comment.url}}">
           </ion-avatar>
-          <ion-icon name="arrow-dropup" class="likeUpDown" (click)="voting(1,comment.id)"></ion-icon>
-          <ion-label class="likeAmount">{{getTheNumberOfLikesOfThePost(comment.id)}}</ion-label>
-          <ion-icon name="arrow-dropdown" class="likeUpDown" (click)="voting(-1,comment.id)"></ion-icon>
+          <ion-icon name="arrow-dropup" class="likeUp" (click)="voting(1,comment.id)" [ngStyle]="{'color': upVoteBtnColor}"></ion-icon>
+          <ion-label class="likeAmount">{{comment.likes}}</ion-label>
+          <ion-icon name="arrow-dropdown" class="likeDown" (click)="voting(-1,comment.id)" [ngStyle]="{'color': downVoteBtnColor}"></ion-icon>
         </div>
         <div class="cardContent">
           <ion-label class="commentatorName">{{comment.username}}</ion-label>        
