--- a/src/app/addacomment/addacomment.page.scss
+++ b/src/app/addacomment/addacomment.page.scss
@@ -38,8 +38,13 @@ ion-card{
     background-color: white;
     display: flex;
     flex-direction: row;
-    border-radius: 5px !important;
 
+}
+
+.viewStory{
+    font-size: 1.5em;
+    margin-bottom: 8px;
+    margin-top: 6px;
 }
 
 .cardContent{
@@ -55,8 +60,8 @@ ion-avatar{
     margin-top: 0.7em;
     margin-left: 0.6em;
     margin-right: 0.2em;
-    max-width: 3.5em;
-    max-height: 3.5em
+    max-width: 3.6em;
+    max-height: 3.6em;
  
 
 }
@@ -92,7 +97,8 @@ ion-avatar{
 }
 
 .likeAmount{
-    font-size: 1.5em;
+    font-size: 1.8em;
+    margin-top: 6px;
 }
 
 .commentatorName{
