--- a/src/app/viewthestory/viewthestory.page.scss
+++ b/src/app/viewthestory/viewthestory.page.scss
@@ -3,6 +3,7 @@ ion-card{
     box-shadow: 5px 5px 5px 5px #999; 
     -moz-box-shadow: 3px 3px 3px 3px #999;
     -webkit-box-shadow: 3px 3px 3px 3px #999;
+   
 }
 
 ion-card-header{
@@ -11,51 +12,64 @@ ion-card-header{
     box-shadow: 1px 1px 1px #999; 
     -moz-box-shadow: 1px 1px 1px #999;
     -webkit-box-shadow: 1px 1px 1px #999;
+    background-color: rgb(24, 126, 129);
+    border-top-left-radius: 5px !important;
+    border-top-right-radius: 5px !important;
 }
 
 .commentData{
     display: flex;
     flex-direction: column;
-    width: 77%;
+    width: 80%;
     margin-left: 10px;
+    margin-top: 3%;
     padding-right: 3px;
 }
 
 .votingSection{
-    position: relative;
-    right: 0;
+
     display: flex;
     flex-direction: column;
-    width: 3em;
+    width: 2.2em;
     align-items: center;
-    justify-content: center;
-    align-content: center;
-    margin-right: 8px;
+    margin-right: 5px;
 }
 
 ion-avatar{
     position: relative;
     left: 0;
-    width: 20%;
-    max-width: 4em;
-    max-height: 4em;
+    width: 22%;
+    max-width: 4.4em;
+    max-height: 4.4em;
+    color: rgb(24, 126, 129);
+    margin-top: 2.2%;
+    align-items:center;
 }
 
 .likeUp{
-    font-size: 1.8em;
+    font-size:2em;
+    padding: 0px;
+    
 }
 
 .likeDown{
-    font-size: 1.8em;
+   
+    font-size:2em;
+}
+
+.likeAmount{
+    font-size: 1.1em;
+    color: white;
 }
 
 .addedtime{
     font-size: 0.8em;
+    color: whitesmoke;
 }
 
 .commentatorName{
     font-size: 1.7em;
-    color: black;
+    color: white;
 
 }
 
