--- a/src/app/viewthestory/viewthestory.page.scss
+++ b/src/app/viewthestory/viewthestory.page.scss
@@ -35,6 +35,15 @@ ion-card-header{
     margin-right: 5px;
 }
 
+ion-textarea{
+    color: black;
+    font-size: 1.1em;
+    overflow-y: hidden;
+    
+    
+    
+}
+
 ion-avatar{
     position: relative;
     left: 0;
