--- a/src/app/addacomment/addacomment.page.html
+++ b/src/app/addacomment/addacomment.page.html
@@ -18,17 +18,15 @@
     </div>
 --> 
 
-  <ion-virtual-scroll [items]="comments" approxItemHeight="'100px'">
+  <ion-virtual-scroll [items]="comments" approxItemHeight="'80px'">
     <div *virtualItem="let comment" > <!--Wrapping with a div is important-->
       <ion-card>
         <div class="likeHolder">
           <ion-avatar>
             <img src="{{comment.url}}">
           </ion-avatar>
-         <!-- <ion-icon name="arrow-dropup" class="likeUp" (click)="voting(1,comment.id)" [ngStyle]="{'color': upVoteBtnColor}"></ion-icon> --> 
           <ion-label class="likeAmount">{{comment.likes}}</ion-label>
           <ion-icon name="eye" class="viewStory" (click)="viewTheStory(comment.id,comment.useremail)"></ion-icon>
-          <!-- <ion-icon name="arrow-dropdown" class="likeDown" (click)="voting(-1,comment.id)" [ngStyle]="{'color': downVoteBtnColor}"></ion-icon>  -->
         </div>
         <div class="cardContent">
           <ion-label class="commentatorName">{{comment.username}}</ion-label>        
@@ -38,10 +36,16 @@
     </div>
   </ion-virtual-scroll>
 
-  <div class="commentingSection">
+   <div class="commentingSection">
       <ion-textarea [(ngModel)]="userComment.comment"  placeholder="add a comment.."></ion-textarea>
       <ion-icon name="send" class="commentSendIcon" (click)="validateTheComment()"></ion-icon>
-  </div>
+  </div> 
+
+  <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button  color="danger">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab> -->
 
  
   
