--- a/src/app/addacomment/addacomment.page.scss
+++ b/src/app/addacomment/addacomment.page.scss
@@ -1,5 +1,5 @@
 ion-content{
-    display: block;
+    display: flex;
     flex-direction: column;
 }
 
@@ -45,6 +45,7 @@ ion-card{
     font-size: 1.5em;
     margin-bottom: 8px;
     margin-top: 6px;
+    color: white;
 }
 
 .cardContent{
@@ -76,11 +77,12 @@ ion-avatar{
 .likeHolder{
     display: flex;
     flex-direction: column;
-    width: 20%;
+    width: 24%;
     height: 90%;
     align-items: center;
     justify-content: center;
     align-content: center;
+    background-color: rgb(24, 126, 129);
 
 }
 
@@ -99,6 +101,7 @@ ion-avatar{
 .likeAmount{
     font-size: 1.3em;
     margin-top: 6px;
+    color: white;
 }
 
 .commentatorName{
@@ -111,6 +114,10 @@ ion-avatar{
 
 .commentSection{
     margin-left: 0.3em;
+}
+
+ion-virtual-scroll{
+    height: 70%;
 }
 
 
