added the new comment add method using the fab

--- a/src/app/addacomment/addacomment.page.html
+++ b/src/app/addacomment/addacomment.page.html
@@ -36,16 +36,16 @@
     </div>
   </ion-virtual-scroll>
 
-   <div class="commentingSection">
+  <!-- <div class="commentingSection">
       <ion-textarea [(ngModel)]="userComment.comment"  placeholder="add a comment.."></ion-textarea>
       <ion-icon name="send" class="commentSendIcon" (click)="validateTheComment()"></ion-icon>
-  </div> 
+  </div>  -->
 
-  <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button  color="danger">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button  color="danger" (click)="addANewCommentPage()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
-  </ion-fab> -->
+  </ion-fab>
 
  
   
